[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horde-video-sdk"
version = "0.1.0"
description = "A Python library to interact with AI-Horde's video generation APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "SuperMalinge", email = "contact@example.com"},
]
keywords = [
    "ai",
    "video-generation",
    "stable-diffusion",
    "generative-ai",
    "ai-horde",
    "video-ai",
    "animatediff",
    "stable-video-diffusion"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "loguru>=0.7.0",
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "pre-commit>=3.3.3",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
worker = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/SuperMalinge/horde-Video-sdk"
Repository = "https://github.com/SuperMalinge/horde-Video-sdk"
Issues = "https://github.com/SuperMalinge/horde-Video-sdk/issues"

[tool.setuptools]
packages = ["horde_video_sdk"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"